--- a/404.html
+++ b/404.html
@@ -9,17 +9,15 @@ layout: default
     max-width: 600px;
     text-align: center;
   }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
+  .not-found {
+    margin: 50px 0;
+    font-size: 22px;
     line-height: 1;
+    font-weight: 400 !important;
     letter-spacing: -1px;
   }
 </style>
 
 <div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p class="not-found">404 not found</p>
 </div>
